# vscode-demo-time

./: .gitignore  .vscodeignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_SPONSORS.md  MIGRATION-V3.md  NEW_ACTION_STEPS.md  README.md  architecture.md  demo-time.schema.json  demotime-infographic.html  demotime-infographic2.html  demotime.slide.schema.json  eslint.config.mjs  index.html  jest.config.js  nx.json  package-lock.json  package.json  preview.config.js  references.md  todo.md  tsconfig.json  tsup.config.ts  tsup.wc.config.ts  vite.config.ts  webview.config.js  wrangler.json
.bolt/: ignore
.demo/: 8.settings-backup-restore.json  README.md  content.txt  demo.json  demo.json.backup  example-v3.act  example-v3.yaml  sample.json  sample.yaml  selection-demo.json  test-global-duplicates.json  test-validation.json  test-validation.yaml  test-zoom.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.serena/: project.yml
__mocks__/: vscode.ts
apps/companion-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/companion-app/src-tauri/icons/: icon.icns
apps/companion-app/src-tauri/src/: api_server.rs  api_server_old.rs  lib.rs  lib_old.rs  main.rs  overlay.rs  overlay_old.rs
assets/: logo.ai
coverage/: clover.xml  coverage-final.json  lcov.info
docs/: .assetsignore  .gitignore  PRO_FEATURES.md  README.md  architecture.md  astro.config.mjs  changelog.md  frontmatter.json  hacker-typer-mode.md  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json  version-3-guide.md  wrangler.jsonc
examples/: hacker-typer-demo.json  (+1 more)
src/: extension.ts
(+1191 files in other folders)
